--- a/src/components/ReviewsHome/CardsReviews/styles.scss
+++ b/src/components/ReviewsHome/CardsReviews/styles.scss
@@ -5,11 +5,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
 
   &__button-before {
     position: absolute;
-    left: 0;
+    left: -30px;
     z-index: 99;
     color: #77c6ca;
     border: 0;
@@ -21,7 +20,7 @@
   }
   &__button-next {
     position: absolute;
-    right: 0;
+    right: -30px;
     color: #77c6ca;
     border: 0;
     background-color: transparent;
@@ -29,66 +28,53 @@
     cursor: pointer;
     animation: grow-animation 2s linear infinite;
   }
+}
 
-  #slider {
-    width: 100%;
-    margin: 0 auto;
-    position: absolute;
-    top: 1rem;
+.review-card {
+  background-color: white;
+  box-shadow: 0 13px 25px 0 rgba(0, 0, 0, 0.2), 0 10px 7px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  width: 100%;
+  max-width: 70vw;
+  min-height: 38rem;
+  transition: all 0.3s ease-in-out;
+  margin: auto;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 
-    .review-card {
-      background-color: white;
-      box-shadow: 0 13px 25px 0 rgba(0, 0, 0, 0.1),
-        0 10px 7px 0 rgba(0, 0, 0, 0.1);
-      border-radius: 4px;
-      width: 100%;
-      max-width: 50rem;
-      height: 40rem;
-      transition: all 0.3s ease-in-out;
-      margin: auto;
-      position: absolute;
-      left: 0;
-      right: 0;
-      padding: 1rem;
-      display: none;
+  &__comment {
+    border-radius: 15px;
+    margin-bottom: 20px;
 
-      &__comment {
-        border-radius: 15px;
-        margin-bottom: 20px;
-        h3 {
-          text-align: center;
-          font-size: 1.8rem;
-          margin-bottom: 10px;
-          padding-top: 15px;
-        }
-        p {
-          padding: 15px;
-          text-align: justify;
-          font-size: 1.5rem;
-        }
-        .rate {
-          padding: 15px;
-          text-align: center;
-          font-size: 1.5rem;
-        }
-      }
-
-      &__client {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-      }
-      &__picture img {
-        height: 100px;
-        border-radius: 50%;
-      }
-      &__name h4 {
-        font-size: 1.8rem;
-        font-weight: bold;
-        text-align: center;
-      }
+    p {
+      padding: 15px;
+      text-align: justify;
+      font-size: 1.5rem;
     }
+    .rate {
+      padding: 5px;
+      text-align: center;
+    }
+  }
+
+  &__client {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  &__picture img {
+    height: 100px;
+    border-radius: 50%;
+  }
+  &__name h4 {
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-align: center;
   }
 }
 @keyframes grow-animation {
@@ -101,10 +87,6 @@
   100% {
     transform: scale(1);
   }
-}
-
-[type='radio'] {
-  display: none;
 }
 
 #s1:checked ~ #slide1,
@@ -122,37 +104,23 @@
 @media (min-width: 769px) {
   .review-cards {
     &__button-before {
-      left: 1rem;
+      left: -60px;
     }
     &__button-next {
-      right: 1rem;
-    }
-    #slider {
-      .review-card {
-        &__comment {
-          width: 40rem;
-        }
-
-        &__picture img {
-          height: 180px;
-        }
-      }
+      right: -60px;
     }
   }
-  #s1:checked ~ #slide1,
-  #s2:checked ~ #slide2,
-  #s3:checked ~ #slide3,
-  #s4:checked ~ #slide4,
-  #s5:checked ~ #slide5 {
-    box-shadow: 0 13px 25px 0 rgba(0, 0, 0, 0.3),
-      0 11px 7px 0 rgba(0, 0, 0, 0.19);
-    transform: translate(0, 0, 0);
-    display: flex;
-    width: 60rem;
+  .review-card {
     flex-direction: row;
-    align-items: center;
-    max-width: 70rem;
-    padding: 2rem;
+    width: auto;
+    padding: 2.5rem;
     gap: 2rem;
+    &__comment {
+      width: 40rem;
+    }
+
+    &__picture img {
+      height: 180px;
+    }
   }
 }
