--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -95,13 +95,15 @@
   }
 
   &__register {
-    font-size: 1rem;
+    font-size: 1.5rem;
     text-decoration: none;
-    width: 6rem;
-    padding: 10px 0;
+    padding: 5px;
     color: #f0fefe;
-    display: block;
+    border: 1px solid white;
+    background-color: black;
+    display: inline-block;
     transition: all 0.3s ease;
+    margin: 0 1rem 0 0;
   }
 
   /* Menu perfil */
@@ -168,18 +170,18 @@
   }
   /* carrito de compras y foto usuario (menu) */
   &__user {
-    position: absolute;
-    right: 4px;
+    margin-right: 1rem;
     display: flex;
     align-items: center;
-    bottom: 50px;
-    flex-direction: column;
+    &__linkto-cart {
+      position: relative;
+    }
   }
 
   &__user--cart {
-    height: 40px;
-    width: 40px;
-    background-color: #fff;
+    height: 30px;
+    width: 30px;
+    background-color: rgba(255, 255, 255, 0.877);
     border-radius: 100%;
     padding: 3px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
@@ -195,6 +197,22 @@
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: center;
+
+    &__quantity {
+      display: inline-block;
+      width: 18px;
+      height: 18px;
+      color: #0c0b10;
+      font-weight: bold;
+      font-size: 1rem;
+      text-align: center;
+      line-height: 18px;
+      border-radius: 50%;
+      background-color: #eabf00;
+      position: absolute;
+      top: 1px;
+      right: -3px;
+    }
   }
 
   &__icon {
@@ -206,11 +224,10 @@
   border-radius: 100%;
   } */
   &__user--user {
-    height: 60px;
-    width: 60px;
+    height: 35px;
+    width: 35px;
     background-color: #fff;
     border-radius: 100%;
-    padding: 3px;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
     display: flex;
     align-items: center;
@@ -218,10 +235,10 @@
     margin: 5px;
     cursor: pointer;
     background-image: url('https://randomuser.me/api/portraits/women/21.jpg');
-    background-size: 61px;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    border-style: double;
+    border-style: solid;
     border-color: #77c6ca;
   }
 }
@@ -260,7 +277,7 @@
     justify-content: space-between;
     position: fixed;
     top: 0;
-    width: 100vw;
+    width: 100%;
     height: 60px;
     border-top: 0;
 
@@ -279,18 +296,16 @@
 
     &__menu {
       position: relative;
-      align-items: center;
       font-size: 1.8rem;
       flex-direction: row;
       transform: none;
-      justify-content: left;
       /* width: 70%; */
       z-index: 0;
     }
 
     &__a {
       border-top: none;
-      width: 100%;
+      width: auto;
       padding: 0;
       color: #f0fefe;
       display: block;
@@ -305,6 +320,13 @@
       background-color: #77c6ca;
     }
 
+    &__a:nth-child(1) {
+      width: 138px;
+      text-align: right;
+      margin-left: 0;
+      padding-left: 0;
+    }
+
     &__a:nth-child(8) {
       border-bottom: 0;
     }
@@ -316,7 +338,7 @@
     /* carrito de compras y foto usuario (menu) */
     &__user {
       position: relative;
-      right: 1.5vw;
+      right: 1rem;
       top: 0;
       flex-direction: row;
       margin-left: 1rem;
@@ -325,7 +347,10 @@
     background-color: #fff;
     border-radius: 100%;
     } */
-
+    &__user--user {
+      height: 45px;
+      width: 45px;
+    }
     &__cart {
       height: 30px;
       background-color: #fff;
