--- a/src/components/GoOrder/Cotiza/styles.scss
+++ b/src/components/GoOrder/Cotiza/styles.scss
@@ -33,7 +33,7 @@
       font-size: 1.8rem;
       padding: 0 0 0 1rem;
       margin: 0;
-      background-color: #e2e2e2;
+      background-color: white;
     }
 
     .number-input {
@@ -51,6 +51,11 @@
         align-items: center;
         text-transform: capitalize;
         justify-content: center;
+      }
+
+      &-selected {
+        background-color: #77c6ca;
+        color: white;
       }
       &-button {
         border: 2px solid #77c6ca;
@@ -150,7 +155,7 @@
   box-shadow: none;
 }
 #btn-back {
-  background-color: white;
+  background-color: transparent;
   color: black;
 }
 #btn-continue {
